--- a/app/landing/index.html
+++ b/app/landing/index.html
@@ -33,7 +33,7 @@
 						<h4 data-loc class="m-0 mb-3">Require password</h4>
 						<h5 data-loc class="m-0 mb-3">You have to type in your password every time you launch Authme.</h5>
 
-						<button class="buttoni my-2" onclick="requirePassword()">
+						<button class="buttoni my-2 requirePassword" onclick="requirePassword()">
 							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 								<path stroke-linecap="round" stroke-linejoin="round" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
 							</svg>
@@ -89,7 +89,7 @@
 						</svg>
 					</div>
 				</div>
-				<button class="buttoni mb-8" onclick="comparePasswords()">
+				<button class="buttoni mb-8 comparePasswords" onclick="comparePasswords()">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 						<path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
