--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -6,9 +6,9 @@
 		<!-- js -->
 		<script defer src="./index.js"></script>
 		<!-- css -->
+		<link rel="stylesheet" href="./index.css" />
 		<link rel="stylesheet" href="../.././styles/global.css" />
 		<link rel="stylesheet" href="../../styles/tailwind.css" />
-		<link rel="stylesheet" href="./src/css/index.css" />
 	</head>
 	<body>
 		<div class="flex h-screen">
