--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -315,6 +315,19 @@
 									GitHub Issues
 								</button>
 							</div>
+
+							<br />
+							<hr />
+							<h3>Integrations</h3>
+							<h4>You can use the provided URL and key with 3rd party integrations. This URL only works on your machine by default.</h4>
+							<div class="mx-auto flex h-[68px] w-72 items-center justify-center rounded-full bg-white">
+								<a href="#" onclick="integrations()">
+									<div class="pointer-events-none relative mr-2 inline-block w-10 select-none rounded-full border-2 border-gray-900 bg-gray-900 align-middle">
+										<input tabindex="-1" id="integrationsToggle" type="checkbox" class="toggle" />
+										<label for="integrationsToggle" class="toggle-bg block h-6 cursor-pointer overflow-hidden rounded-full bg-white"></label></div
+								></a>
+								<span id="integrationsLabel" class="text-xl text-black">-</span>
+							</div>
 						</div>
 					</div>
 				</div>
