--- a/app/settings/index.html
+++ b/app/settings/index.html
@@ -92,16 +92,10 @@
 					</div>
 
 					<!-- header -->
-					<div id="header" class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 text-center">
+					<div id="header" class="mx-auto mt-40 w-3/5 rounded-2xl bg-gray-700 pb-1 text-center">
 						<img src="../../img/header.png" class="relative top-5 h-16 w-16" />
 						<h2 data-loc>Settings</h2>
 						<h4 data-loc>You can configure the app settings here.</h4>
-						<button class="buttoni mb-6" onclick="hide()">
-							<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-								<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-							</svg>
-							<span data-loc>Close window</span>
-						</button>
 					</div>
 
 					<!-- settings -->
@@ -320,6 +314,19 @@
 									</svg>
 									GitHub Issues
 								</button>
+							</div>
+
+							<br />
+							<hr />
+							<h3>Integrations</h3>
+							<h4>You can use the provided URL and key with 3rd party integrations. This URL only works on your machine by default.</h4>
+							<div class="mx-auto flex h-[68px] w-72 items-center justify-center rounded-full bg-white">
+								<a href="#" onclick="integrations()">
+									<div class="pointer-events-none relative mr-2 inline-block w-10 select-none rounded-full border-2 border-gray-900 bg-gray-900 align-middle">
+										<input tabindex="-1" id="integrationsToggle" type="checkbox" class="toggle" />
+										<label for="integrationsToggle" class="toggle-bg block h-6 cursor-pointer overflow-hidden rounded-full bg-white"></label></div
+								></a>
+								<span id="integrationsLabel" class="text-xl text-black">-</span>
 							</div>
 						</div>
 					</div>
