--- a/app/codes/index.html
+++ b/app/codes/index.html
@@ -29,7 +29,7 @@
 						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
 					</svg>
 
-					<p class="relative mx-3 flex flex-row justify-center">Authme 4 is releasing on November 8., this means there is no update coming to Authme 3. Please migrate when Authme 4 comes out!</p>
+					<p class="relative mx-3 flex flex-row justify-center">Authme 4 is releasing on November 8., this means there is no update coming to Authme 3. You will see an upgrade banner soon.</p>
 				</div>
 				<a onclick="this.parentElement.style.display='none'" class="relative transform cursor-pointer rounded-md p-1 transition-colors duration-200 hover:text-gray-800">
 					<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -50,7 +50,7 @@
 					<div class="relative top-3 mx-3 mb-5 flex flex-row flex-wrap">
 						Authme 3 is deprecated. Please upgrade to Authme 4!<br />
 						This is a major release so there are some minor breaking changes, please follow the migration guide.<br />
-						But there are some notable changes to: Auto update, import from camera, macOS support and more!
+						These are the notable changes: New design, hardware authentication, faster and better app!
 						<div class="flex flex-wrap gap-1 pt-5 pl-5">
 							<button type="button" onclick="migrationGuide()" class="relative -top-1.5 mr-2 ml-3 cursor-pointer rounded-full border-2 border-white bg-white py-1 px-3 text-center text-base font-bold text-black transition duration-200 ease-in hover:bg-transparent hover:text-white">
 								<svg xmlns="http://www.w3.org/2000/svg" class="relative top-1" height="20" width="20" fill="none" viewBox="0 0 24 24" stroke="currentColor">
